# BolSaaf

./: .gitignore  AUDIO_SAMPLE_CHECK_20260406_144418.md  AUDIO_SAMPLE_CHECK_20260406_150219.md  AUDIO_SAMPLE_CHECK_20260407_091858.md  AUDIO_SAMPLE_CHECK_20260407_093026.md  AUDIO_SAMPLE_CHECK_20260407_094934.md  AUDIO_SAMPLE_CHECK_20260407_134932.md  AUDIO_SAMPLE_CHECK_20260407_140621.md  AUDIO_SAMPLE_CHECK_20260409_MATRIX.md  AUDIO_TUNING_TEST_LOG.md  BILLING_CONTRACT.md  CLAUDE.md  FEATURE_ROADMAP_PHASE3_VIRAL.md  IMPLEMENTATION_SUMMARY.md  MD3_DESIGN_SYSTEM.md  MOBILE_E2E_TEST_PLAN.md  PHASE_PROGRESS_TRACKER.md  POST_LAUNCH_TASKS.md  PRODUCTION_CHECKLIST.md  README.md  SERVER_FLOW.md  VISION_V2_VOICE_FIRST_REEL.md  VOICE_API_CONTRACT_PHASE2_PLUS.md  Voice Cleaning API - Mobile Integratio.md  build_log.txt  gradlew  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  rnnoise_jni.cpp
app/src/main/cpp/rnnoise/include/: rnnoise.h
app/src/main/cpp/rnnoise/src/: arch.h  celt_lpc.c  common.h  cpu_support.h  denoise.c  kiss_fft.c  kiss_fft.h  nnet.c  nnet.h  pitch.c  pitch.h  rnn.c  rnn.h  rnn_data.c
data/: API_EXTRACT_FROM_URL.md  API_REEL_V2.md  AUTORESEARCH_WORKFLOW.md  BENCHMARK_REEL_5TAKE_20260409.md  BENCHMARK_REEL_5TAKE_TEMPLATE.md  FEEDBACK_RESULT_TRACKER.md  NEXT_7DAY_PLAN.md  audio_sample_matrix_20260409.json  autoresearch_daily_brief.md  benchmark_adaptive_batch.json  feedback_summary_history.jsonl
gradle/: libs.versions.toml
scripts/: _patch_add_background_execution_remote.py  _patch_demucs_exec_remote.py  (+26 more)
(+135 files in other folders)
